# kiwofarm

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  키워팜_5주_MVP_구현_로드맵.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: dashboard.py  recommend.py  shipping.py  twin.py
backend/app/core/recommend/: engine.py  llm_reason.py
backend/app/core/twin/: simulator.py
backend/app/data/: kma.py  nongsaro.py  smartfarm.py
backend/app/schemas/: dashboard.py  recommend.py  twin.py
docs/: api.md  data_sources.md  demo_scenario.md  키워팜_기획서_v3.docx
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: theme.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/recommend/result/: page.tsx
frontend/src/app/shipping/: page.tsx
frontend/src/app/twin/[cropId]/: page.tsx
frontend/src/components/dashboard/: PriceForecast.tsx  ShippingScoreCard.tsx
frontend/src/components/layout/: SiteHeader.tsx
frontend/src/components/shipping/: PeerFarmPattern.tsx
frontend/src/lib/: constants.ts  regions.ts  types.ts
frontend/src/lib/api/: client.ts  dashboard.ts  shipping.ts
frontend/src/lib/recommend/: mock.ts
frontend/src/lib/twin/: mock.ts
frontend/src/providers/: QueryProvider.tsx
